      correctness.  As a result gdb(1) doesn't crash and therefore
      lmdbg-sym(1) work correctly.

    - stacktrace(3) doesn't not crash anymore on NetBSD/x64_64 with
      system utilities.  See implementation details in stacktrace.c.

    - new option -N

    - option -v works correctly with non-zero exit status of progname.

    - exits with error if progname is not specified.

  AWK interpreter is found at configure time via MKC_REQUIRE_PROGS.

  Build and regression tests were fixed for non-empty MAKEOBJDIR case.

  ChangeLog file is never installed.

  lmdbg-s2m and lmsbg-m2s was moved to libexec dir.

  mk-configure-0.24 is required for build.

  Fixes, improvements and additions in regression tests.

======================================================================
Version 1.1.0, by Aleksey Cheusov, Sun,  2 Sep 2012 19:04:21 +0300

  Fix in regression tests. Now "make test" exits with non-zero status
  if something fails.

  lmdbg-run:
    - Zero addresses are removed from stacktraces generated by glibc's
      backtrace(3).  This fixes asserts in lmdbg-stat(1).
    - Double "0x" in "info section" were fixed (seen on NetBSD).
    - backtrace(3) from libexecinfo is used instead of builtin
      implementation if the library and execinfo.h are available
      (FreeBSD, NetBSD).

  lmdbg-sym:
    - Fixes. Sometimes addresses were converted to symbols
      incorrectly. The problem was seen on modern Linux distros with
      recent gdb(1).

  lmdbg-stat:
    - Now incompletly read lines (having no LF in the end) are
      ignored.  This fixes crashes and therefore empty output of
      lmdbg(1) when analysed program is killed.
    - Alternative implementation written in awk was removed.

  Build infrastructure was converted to 2-level dirs.
  This requires mk-configure>=0.23.0 for build.

  Minor clean-ups in man pages and Makefiles.

======================================================================